[package]
name = "rustls-server"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper-rustls = "0.27.1"
http = "1"
hyper = { version = "1", default-features = false }
hyper-util = { version = "0.1", default-features = false, features = [
    "client-legacy",
    "tokio",
    "server",
] }
log = { version = "0.4.4", optional = true }
pki-types = { package = "rustls-pki-types", version = "1" }
rustls-native-certs = { version = "0.7", optional = true }
rustls-platform-verifier = { version = "0.3", optional = true }
rustls = { version = "0.23", default-features = false }
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false }
tower-service = "0.3"
webpki-roots = { version = "0.26", optional = true }
futures-util = { version = "0.3", default-features = false }
rustls-pemfile = "2.1.2"
socket2 = { version = "0.5.7", features = ["all"] }
num_cpus = "1.16.0"
anyhow = { version = "1.0.83" }
http-body-util = "0.1.1"
libc = "0.2.154"
openssl = { version = "0.10.64", features = ["vendored"] }
tokio-openssl = "0.6.4"
[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"
[features]
default = ["aws-lc-rs", "rustls"]
ring = ["rustls/ring"]
aws-lc-rs = []
jemallocator = []
ossl = []
rustls = []
